# pyblis

./: .gitattributes  .gitignore  MANIFEST.in  README.rst  setup.cfg  setup.py
lib/: CMakeLists.txt  generate.py  pyblis-template.c  pyblis.syms
lib/src/: pyblis.c
pyblis/: __init__.py  _core.py  _lib.py.template  _numba.py  _version.py  _wrappers.py  core.py  lib.py  lib.py.template  pyblis.c
pyblis/tests/: test_core.py  test_numba.py  test_numba_wrappers.py  test_wrappers.py  utils.py
